XMLHttpRequest: check if 'loadstart' handler cancelled send().

'loadstart' is dispatched to both 'download' and upload event handlers
while initiating a send() operation. Should those event handlers cause
the ongoing send operation to be aborted/stopped/cancelled, this outer
send() operation shouldn't proceed upon return.

R=yhirano
BUG=642242

Review-Url: https://codereview.chromium.org/2507773002
Cr-Commit-Position: refs/heads/master@{#433157}

Former-commit-id: 13c30eae8fbe5a1b9927c12be1cd88d102009932